plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'com.litclub'
version = '0.0.1'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

javafx {
    version = "24.0.2"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    // main bio of your app goes here
    mainClass = 'com.litclub.Launcher'
    applicationDefaultJvmArgs = [
        '--enable-native-access=javafx.graphics,javafx.web,javafx.media'
    ]
}
